Links tab in community fixed overflow; fixed blog card overflow issue; fixed filters UI issues in community header mobile; fixed post modal overflow issue

--- a/src/components/BlogCard/BlogCard.module.css
+++ b/src/components/BlogCard/BlogCard.module.css
@@ -1,3 +1,7 @@
+.author {
+  max-width: 180px;
+}
+
 .container {
   display: flex;
   flex-direction: column;
@@ -12,6 +16,9 @@
   max-height: 329px;
 }
 .authorAndDate {
+  display: flex;
+  align-items: center;
+
   color: var(--Purple-1, #8064A2);
 font-family: Poppins;
 font-size: 14px;
